# python-lambda

./: .gitignore  .gitlab-ci.yml  Makefile  Pipfile  README.md  aws-cleanup.sh  aws-deploy.sh  mypy.ini  pylintrc  pyproject.toml  pytest.ini  renovate.json  requirements-dev.txt  requirements.txt  samconfig.toml  setup.cfg  setup.py  sonar-project.properties  template.yaml
burger_maker/: app.py  burger_maker.openapi.yml  requirements.txt
events/: DELETE_burgers_any_event.json  DELETE_burgers_cheeseburger_event.json  DELETE_burgers_foie-gras_event.json  GET_recipes_event.json
postman/: BurgerMaker.collection.json
tests/: conftest.py
tests/unit/: test_burger_maker_function.py
