# See: https://setuptools.pypa.io/en/latest/userguide/declarative_config.html
[metadata]
name = burger_maker
version = 0.7.0
description = to-be-continuous project sample featuring Python, SonarQube, AWS (Lambda) and Postman
license = LGPLv3

[options]
packages = 
    burger_maker

python_requires = >=3.9

install_requires =
    aws-lambda-powertools==2.10.0

[options.extras_require]
dev =
    black==21.12b0
    mypy==0.991
    pytest==7.2.0
    pytest-cov==4.0.0
    pytest-env==0.8.1
    pylint==2.17.4
    jmespath==1.0.1
    boto3==1.26.113
    aws-xray-sdk==2.12.0
