# See: https://setuptools.pypa.io/en/latest/userguide/declarative_config.html
[metadata]
name = burger_maker
version = 0.7.0
description = to-be-continuous project sample featuring Python, SonarQube, AWS (Lambda) and Postman
license = LGPLv3

[options]
packages = 
    burger_maker

python_requires = >=3.9

install_requires =
    aws-lambda-powertools==2.16.2

[options.extras_require]
dev =
    black==23.3.0
    mypy==1.3.0
    pytest==7.2.0
    pytest-cov==4.1.0
    pytest-env==0.8.1
    pylint==2.17.4
    jmespath==1.0.1
    boto3==1.26.154
    aws-xray-sdk==2.12.0
